# learning-bitcoin

./: bitcoin_transactions.md
bitcoin/: bitcoin_transactions.md  script.md
bitcoin/transaction/: Cargo.toml  README.md
bitcoin/transaction/src/: hash.rs  main.rs  opcodes.rs  script.rs  transaction.rs  txio.rs
bitcoin/transaction/src/deserialize/: mod.rs
bitcoin/transaction/src/serialize/: mod.rs
bitcoin/transaction/src/txio/: mod.rs
lightning/: intro_to_lightning.md  layers_of_lightning.md
transaction/: Cargo.toml
transaction/src/: main.rs  txio.rs
